fixed bug:white bar while scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     min-height: 100vh;
-    background: url('/images/idk.jpg') no-repeat center center fixed;
+    background: url('/images/idk.jpg') no-repeat center center;
     background-size: cover;
 }
 
